--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- <script type="text/javascript" src="./js/overwatch_comment.js"></script> -->
 
 
-
-
-
-
     <script type="text/javascript">
         $(document).ready(function(){
             var btn = $('.btn');
@@ -113,6 +109,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       height: 50px;
       margin: 10px;
       }
+    .btn-test {
+     display:none;
+      }
     </style>
 </head>
 <body id="wrapper">
@@ -133,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <button class="btn5">사용자중지</button>
                         <button class="btn6">창닫기</button>
                         <button class="btn7">오류발생파일</button>
-                        <button class="btn-test" style="display:none;">테스트야</button>
+                        <button class="btn-test">테스트야</button>
                     </div>
                 </div>
 
