--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             btn7.on('click', function(){
               $('.btn-test').show();
+              console.log('click');
             });
             $('.btn-test').on('click', function(){
               $('.btn-test').hide();
