--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   gtag('config', 'UA-52971761-4');
 </script>
+<script>
+  dataLayer = [];
+</script>  
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
