--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             btn7.on('click', function(){
               $('.btn-test').show();
-              dataLayer.push({'에러코드': '잘되나'});
+              dataLayer.push({'gtm.errorMessage': '잘되나'});
               console.log('click');
             });
             $('.btn-test').on('click', function(){
-              dataLayer.push({'에러코드': 'updated value'});
+              dataLayer.push({'gtm.errorMessage': 'updated value'});
               $('.btn-test').hide();
             });
         });
