--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <button class="btn5">사용자중지</button>
                         <button class="btn6">창닫기</button>
                         <button class="btn7">오류발생파일</button>
-                        <button class="btn-test">테스트야</button>
+                        <button id="plz" class="btn-test">테스트야</button>
                     </div>
                 </div>
 
