--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <script type="text/javascript">
         $(document).ready(function(){
             dataLayer.push([
-              {'eventCategory': '카테고리를 보내본다1'.},
-              {'eventAction': '액션을 보내본다1'.},
-              {'eventLabel': '라벨을 보내본다1'.},
-              {'eventValue': '19981'.},
+              {'eventCategory': '카테고리를 보내본다1'},
+              {'eventAction': '액션을 보내본다1'},
+              {'eventLabel': '라벨을 보내본다1'},
+              {'eventValue': '19981'},
             ]);
             var btn = $('.btn');
             var btn1 = $('.btn1');
