--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 {'eventCategory': '카테고리를 보내본다'},
                 {'eventAction': '액션을 보내본다'},
                 {'eventLabel': '라벨을 보내본다'},
-                {'eventValue': '1998'},
+                {'eventValue': '1998'}
               ]);
               $('.btn-test').hide();
             });
