--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             btn6.on('click', function(){
             });
           
-          function(gogo){
+          function gogo(){
               dataLayer.push([
                 {'eventCategory': '카테고리를 보내본다'},
                 {'eventAction': '액션을 보내본다'},
