--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             });
           
           function gogo(){
-              dataLayer.push([
-                {'eventCategory': '카테고리를 보내본다'},
-                {'eventAction': '액션을 보내본다'},
-                {'eventLabel': '라벨을 보내본다'},
-                {'eventValue': '1998'}
-              ]);
+              dataLayer.push({
+                'eventCategory': '카테고리를 보내본다',
+                'eventAction': '액션을 보내본다',
+                'eventLabel': '라벨을 보내본다',
+                'eventValue': '1998'
+              });
           }
 
             btn7.on('click', function(){
