--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             var btn5 = $('.btn5');
             var btn6 = $('.btn6');
             var btn7 = $('.btn7');
-            var nulletc = 0;
+            var numnum = '';
           
             btn.on('click', function(){
                user();
-               nulletc = 15;
+               numnum = 15;
+               console.log(numnum);
             });
 
             btn1.on('click', function(){
