--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 output.css('color', '#ffffff');
                 input.val("");
                 output.text("이곳에 번역된 내용이 표시됩니다.");
+                output.removeClass("return_result");
             });
 
             clip.on('click', function(){
@@ -88,6 +89,7 @@
                         output.text(result);
                     }
                     output.css('color', '#f8cc18');
+                    output.addClass("return_result");
                 }
             });
 
